# executivemonitoring

./: .editorconfig  .env.example  .eslintrc.js  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.base.json
.claude/: settings.json
.cursor/rules/: 00-project-identity.mdc  01-coding-philosophy.mdc  02-language-naming.mdc  03-security-baseline.mdc  04-quality-gates.mdc  10-backend-architecture.mdc  11-auth-jwt.mdc  12-rbac-guards.mdc  13-collectors.mdc  14-fastapi-routers.mdc  15-database-alembic.mdc  16-audit.mdc  17-processor-pipeline.mdc  18-ai-engine.mdc  20-frontend-next.mdc  21-next-routes.mdc  22-forms.mdc  23-react-query.mdc  24-components.mdc  25-a11y.mdc  27-mobile-react-native.mdc  30-infra-aws.mdc  35-testing-pytest.mdc  40-add-new-endpoint.mdc  41-add-new-screen.mdc  42-add-alembic-migration.mdc  43-add-rbac-guard.mdc  44-refactor-to-pattern.mdc  45-write-adr.mdc  46-fix-failing-test.mdc  47-add-collector.mdc  48-git-phase-branch.mdc  50-phase-00-infra-scaffold.mdc  51-phase-01-backend-core-fix.mdc  51-phase-01-backend-core.mdc  52-phase-02-collectors-fix.mdc  52-phase-02-collectors.mdc  53-phase-03-processor-fix.mdc  (+14 more)
.github/: BRANCH_PROTECTION.md  pull_request_template.md
Docs/: 00_PROJECT_OVERVIEW.md  01_DOMAIN_MODEL.md  02_DATABASE_SCHEMA.md  03_API_CONTRACTS.md  04_BACKEND_SPEC.md  05_FRONTEND_SPEC.md  06_SCREEN_CATALOG.md  07_SECURITY_IMPLEMENTATION.md  08_TESTING_STRATEGY.md  09_DEV_WORKFLOW.md  10_IMPLEMENTATION_ROADMAP.md  HUMAN_GATE_FAZ3_PROCESSOR.md  MANUEL_EKRAN_TEST_MADDELERI.md  YGIP_screen_reference_mockup.html  mimari-kararlar.md
alembic/: env.py
fixtures/: README.md  keywords.json  newsletter_templates.json  prompt_templates.json  sources.json  system_settings.json  users.json
infra/: README.md  app.py  cdk.json  requirements.txt
scripts/: backfill_relevance.py  build_lambda.sh  demo-share.sh  seed.py  seed_content_archive.py  smoke_pipeline_dev.sh
tests/: conftest.py
(+475 files in other folders)
