[project]
name = "ygip"
version = "0.1.0"
description = "YıldızHolding Global Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps", "services", "packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "."
packages = ["apps", "services", "packages"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trafilatura.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langdetect.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tiktoken.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cryptography.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiosmtplib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "firebase_admin.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# Alembic: kök `alembic.ini` + `alembic/env.py` (`Docs/09` §8.3)

[tool.coverage.run]
source = ["apps", "services", "packages"]
branch = true

[tool.coverage.report]
fail_under = 70
show_missing = true
